syntax = "proto3";
package todo;

option csharp_namespace = "TodoGrpc";

message TodoMessage {
  int32 Id = 1;
  string Title = 2;
  string Description = 3;
  bool IsComplete = 4;
}

message EmptyMessage {}

message BoolMessage {
  bool isSuccess = 1;
}

service TodoService {
  rpc Get(EmptyMessage) returns (stream TodoMessage) {}
  rpc Create(TodoMessage) returns (TodoMessage) {}
  rpc Update(TodoMessage) returns (TodoMessage) {}
  rpc Delete(TodoMessage) returns (BoolMessage) {}
}